[gd_scene format=3 uid="uid://lbja0ku3jm2o"]

[ext_resource type="StyleBox" uid="uid://qcp3kjexcetq" path="res://Assets/Themes/Panels/panel_background.tres" id="1_alvg1"]
[ext_resource type="Theme" uid="uid://boysjsm1bldbj" path="res://Assets/Themes/_UI/uipanel.tres" id="1_f6fbm"]
[ext_resource type="Script" uid="uid://dcdl8x4jty1ec" path="res://Components/UI/UIPanel/panel_logic.gd" id="1_wlgud"]
[ext_resource type="StyleBox" uid="uid://dqn7kpkgl3va5" path="res://Assets/Themes/Panels/title_bar_background.tres" id="2_wlgud"]
[ext_resource type="StyleBox" uid="uid://bnm1kcs34crjn" path="res://Assets/Themes/Buttons/close/button.tres" id="3_f6fbm"]
[ext_resource type="PackedScene" uid="uid://ceb1ctsskiko1" path="res://Components/UI/Buttons/button_effects_handler.tscn" id="4_5t3e3"]

[node name="UIPanel" type="Control" unique_id=1256259504]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f6fbm")
script = ExtResource("1_wlgud")

[node name="Background" type="ColorRect" parent="." unique_id=1234555341]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.06, 0.38431373)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1030746171]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1715511925]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer" unique_id=747387513]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer" unique_id=849290672]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_alvg1")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer" unique_id=1274551440]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" unique_id=636281053]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/TitleBar" unique_id=269908201]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_wlgud")
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Close" type="Control" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/TitleBar" unique_id=1991571259]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/TitleBar/Close" unique_id=1618942533]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -43.0
offset_top = 4.0
offset_right = -11.0
offset_bottom = 36.0
pivot_offset = Vector2(23.5, 25.5)
theme_override_styles/normal = ExtResource("3_f6fbm")
theme_override_styles/pressed = ExtResource("3_f6fbm")
theme_override_styles/hover = ExtResource("3_f6fbm")
theme_override_styles/disabled = ExtResource("3_f6fbm")
theme_override_styles/focus = ExtResource("3_f6fbm")

[node name="ButtonEffectsHandler" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer/TitleBar/Close/CloseButton" unique_id=1061448880 instance=ExtResource("4_5t3e3")]

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" unique_id=1753221747]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="MarginContainer/HBoxContainer" unique_id=603292399]
layout_mode = 2
size_flags_horizontal = 3
